--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 .title {
-	color: #082F6B;
+	color: #D325EB;
 	text-align: center;
-	margin-top: 15%;
+	margin-top: 8%;
 	font-size: 39px;
 }
 
 body {
-	background-color: #65090A
+	background-color: #691196 
 }
