--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 	text-align: center;
 	margin-top: 8%;
 	font-size: 39px;
+	
 }
 
 body {
@@ -15,4 +16,46 @@ body {
 
 .monk-container {
 	text-align: center
+}
+
+.title {
+  position: relative;
+  font-family: sans-serif;
+  font-size: 2em;
+  letter-spacing: 4px;
+  overflow: hidden;
+  background: linear-gradient(90deg, #000, #fff, #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
+
+@keyframes animate {
+  0% {
+    background-position: -500%;
+  }
+  100% {
+    background-position: 500%;
+  }
+}
+
+.body {
+	text-align: center;
+	margin-bottom: 80%;
+}
+
+.body {
+  position: relative;
+  font-family: sans-serif;
+  font-size: 2em;
+  letter-spacing: 4px;
+  overflow: hidden;
+  background: linear-gradient(90deg, #000, #fff, #000);
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 3s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
 }
